--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^7.0.2",
     "next": "14.2.13",
-    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/node": "22.14.1",
+    "@types/react": "19.1.2",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "eslint-config-next": "14.2.13",
+    "tailwindcss": "^4.1.4"
   }
 }
